[package]
name = "sandboxfs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
fuser = "0.17"
libc = "0.2"
nix = { version = "0.30", features = ["fs", "user", "process"] }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "local-offset"] }
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[lib]
name = "sandboxfs"
path = "src/lib.rs"

[[bin]]
name = "sandboxfs"
path = "src/bin/sandboxfs.rs"


[[bin]]
name = "sandboxfs-access-tui"
path = "src/bin/sandboxfs-access-tui.rs"
