[package]
name = "sandboxfs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "BSD-3-Clause"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
directories = "6.0"
fuser = "0.17"
libc = "0.2"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "2.0"
signal-hook = "0.4"
sysinfo = "0.38.4"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"

[lib]
name = "sandboxfs"
path = "src/lib.rs"

[[bin]]
name = "sandboxfs"
path = "src/bin/sandboxfs.rs"


[[bin]]
name = "sandboxfs-access-tui"
path = "src/bin/sandboxfs-access-tui.rs"
